# ecological

./: .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  setup.py  tox.ini  tutorial.ipynb
.github/workflows/: ci.yml
ecological/: __init__.py  autoconfig.py  casting.py  config.py  transform.py
tests/: test_all.py  test_config.py
