[project]
name = "ecological"
version = "3.0.0"
description = "Map a Python configuration from environment variables"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "João Santos", email = "jmcs@jsantos.eu" },
    { name = "Marcin Zaremba", email = "mrcn.zrmb@gmail.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]
dependencies = [
    "dataclasses>=0.8.0,<1.0.0"
]

[project.urls]
Homepage = "https://github.com/jmcs/ecological"
Repository = "https://github.com/jmcs/ecological"

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pygments>=2.19.2,<3.0.0",
    "ty",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"